--- a/mapzen.tex
+++ b/mapzen.tex
@@ -1,1 +1,4 @@
+\section{Mapzen}
+Mapzen Merupakan laboratorium pemetaan open source dibawah Samsung Accelatoryang membangun dan mendukung data dan software terbuka untuk mempromosikan ekosistem pemetaan yang sehat. Tim Pengembangan dari Mapzen merupakan salah satu divisi dari SRA (Samsung Research Amerika) yang berfokus pada komponen inti dari platform geo, termasuk pencarian, rendering, navigasi, dan data.
 
+Keunggulan dari produk Mapzen adalah penggunaan mesin rendering fleksibel yang disebut juga Tangram yang digunakan untuk menampilkan peta digital dalam nuansa 2D maupun 3D secara real-time. Mapzen dibangun dari berbagai peralatan open-source yang dikemas ke dalam layanan Web dan di hosting di server Mapzen.
