--- a/mapzen.tex
+++ b/mapzen.tex
@@ -74,3 +74,8 @@ Keunggulan dari produk Mapzen adalah penggunaan mesin rendering fleksibel yang d
     ]
 }
 }
+
+/subsection {Panel Daftar Layer}
+    Pada bagian kiri QGIS terdapat panel daftar layer. Daftar layer-layer ini, atau file, yang dimasukkan ke dalam proyek QGIS. Pada proyek ini, kita memliki dua layer.
+    Panel layer tidak hanya menunjukkan semua file yang kita buka, tetapi juga menjelaskan susunan urutan yang akan kita gambar pada map canvas. Sebuah layer yang terdapat di posisi paling bawah akan tergambar pertama kali dan beberapa layer yang terdapat diatasnya akan digambar pada posisi paling atas.
+    Salah satu format file umum adalah shapefiles, dengan ekstensi akhir dari nama file tersebut bertuliskan .shp. Shapefiles sering digunakan untuk menyimpan geodata, dan umumnya digunakan pada aplikasi SIG seperti QGIS.
