--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,9 @@ Mapzen Merupakan laboratorium pemetaan open source dibawah Samsung Accelatoryang
 
 Keunggulan dari produk Mapzen adalah penggunaan mesin rendering fleksibel yang disebut juga Tangram yang digunakan untuk menampilkan peta digital dalam nuansa 2D maupun 3D secara real-time. Mapzen dibangun dari berbagai peralatan open-source yang dikemas ke dalam layanan Web dan di hosting di server Mapzen.
 
+\subsection{QGIS}
+QGIS adalah perangkat Sistem Informasi Geografis (SIG) Open Source yang user friendly dengan lisensi di bawah GNU General Public License. QGIS merupakan proyek tidak resmi dari Open Source Geospatial Foundation (OSGeo). QGIS dapat dijalankan pada Linux, Unix, Mac OSX, Windows dan Android, serta mendukung banyak format dan fungsionalitas data vektor, raster, dan basisdata.
+
 \subsection{file Format}
 {
 "type": "Feature",
