--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,14 @@ Keunggulan dari produk Mapzen adalah penggunaan mesin rendering fleksibel yang d
 \subsection{QGIS}
 QGIS adalah perangkat Sistem Informasi Geografis (SIG) Open Source yang user friendly dengan lisensi di bawah GNU General Public License. QGIS merupakan proyek tidak resmi dari Open Source Geospatial Foundation (OSGeo). QGIS dapat dijalankan pada Linux, Unix, Mac OSX, Windows dan Android, serta mendukung banyak format dan fungsionalitas data vektor, raster, dan basisdata.
 
+
+\subsection{Menu Pada QGIS}
+source type ini berupa pilihan :
+File | Directory | Database | Protocol
+Protocol yang disupport adalah URI (Uniform Resources Identifier) untuk GeoJSON, GeoJSON sendiri merupakan enkoding open format data geografis bertipe JavaScript Open Notation.
+Database yang disupport antara lain ESRI Personal Geodatabase, ODBC, Postgre, dan MySQL, artinya anda bahkan bisa buka Geodatabase ESRI walaupun kemungkinan ada beberapa format data khusus yang hilang, tetapi spatial-nya akan tetap dapat terbaca.
+
+
 \subsection{file Format}
 {
 "type": "Feature",
