--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,8 @@ Keunggulan dari produk Mapzen adalah penggunaan mesin rendering fleksibel yang d
 
 \subsection{QGIS}
 QGIS adalah perangkat Sistem Informasi Geografis (SIG) Open Source yang user friendly dengan lisensi di bawah GNU General Public License. QGIS merupakan proyek tidak resmi dari Open Source Geospatial Foundation (OSGeo). QGIS dapat dijalankan pada Linux, Unix, Mac OSX, Windows dan Android, serta mendukung banyak format dan fungsionalitas data vektor, raster, dan basisdata.
+Quantum GIS mendukung penggunaan "GPS tools" untuk menggunggah (upload) atau mengunduh (download) data langsung ke unit GPS. Pengguna juga dapat mengkonversi format-format GPS ke format GPX atau melakukan import dan export terhadap data format GPX yang ada.
+Andaikan pengguna memiliki sebuah web server yang telah terpasang fitur UMN MapServer, pengguna dapat menpublikasi map di internet untuk berbagi (sharing) dengan pengguna lainnya.
 
 
 \subsection{Menu Pada QGIS}
@@ -12,6 +14,9 @@ source type ini berupa pilihan :
 File | Directory | Database | Protocol
 Protocol yang disupport adalah URI (Uniform Resources Identifier) untuk GeoJSON, GeoJSON sendiri merupakan enkoding open format data geografis bertipe JavaScript Open Notation.
 Database yang disupport antara lain ESRI Personal Geodatabase, ODBC, Postgre, dan MySQL, artinya anda bahkan bisa buka Geodatabase ESRI walaupun kemungkinan ada beberapa format data khusus yang hilang, tetapi spatial-nya akan tetap dapat terbaca.
+Directory yang disupport TIGER Census /Line, Arcinfo Coverage yang binary, dan lainnya.
+File : format file yang disupport antara lain DXF Cad, KML, Mapinfo TAB, ESRI Shapefiles, *.GPX/gpx, dan berbagai format lain juga termasuk gdb.
+
 
 
 \subsection{file Format}
