--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,10 @@ Database yang disupport antara lain ESRI Personal Geodatabase, ODBC, Postgre, da
 Directory yang disupport TIGER Census /Line, Arcinfo Coverage yang binary, dan lainnya.
 File : format file yang disupport antara lain DXF Cad, KML, Mapinfo TAB, ESRI Shapefiles, *.GPX/gpx, dan berbagai format lain juga termasuk gdb.
 
+Directory yang disupport TIGER Census /Line, Arcinfo Coverage yang binary, dan lainnya.
+File : format file yang disupport antara lain DXF Cad, KML, Mapinfo TAB, ESRI Shapefiles, *.GPX/gpx, dan berbagai format lain juga termasuk gdb.
+Untuk menampilkan tinggal anda pilih format data anda,
+masukkan source-dataset dengan klik browse, klik Open, data anda sudah terpilih.
 
 
 \subsection{file Format}
